chore(release): v2.1.0 开源整理——预置技能种子化 + 初始数据收敛 + 开发文档
- 预置技能开箱即用：9 个内置技能（深度调研 / A股分析 / docx / pptx / xlsx /
  pdf / image-gen / video-gen / skill-creator）导出为 resources/seed/
  builtin-skills.json，新增 BuiltinSkillSeeder 首启播种（含 prod），
  按名幂等、不覆盖管理员改动——新部署不再依赖整库迁移
- 演示数据收敛：一个演示岗位「通用工作助理」绑定全部预置技能；初始账号
  收敛为 admin/admin123（超管）+ demo/demo123（员工+FDE）；OA+CRM 本体
  建模示例保留不变
- 修复全新环境首启阻断：向量服务未就绪时演示知识库播种降级跳过，不再拖死启动
- 新增 DEVELOPMENT.md 开发与启动指南；README 补初始账号表与文档入口
- 四端版本对齐 2.1.0（客户端 / 管理前端 / FDE 工作台 / 后端 pom）
- 清理开发期临时文件（skills-center.png / skills-page.yml）

Co-Authored-By: iML Studio <imoling.cn@gmail.com>